Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17483

Application output pane does not show console output of the launched app in simulator.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 4.2.1
    • Qt Creator 4.2.1
    • iOS Support
    • None

      Since we no longer start the app in-process, the console output is not shown in the application output pane.

      With Xcode 8 we have the option to capture the stdout and stderr of an launched app. The fix shall work on Xcode version 8 onwards.

        For Gerrit Dashboard: QTCREATORBUG-17483
        # Subject Branch Project Status CR V

            vikas Vikas Pachdha
            vikas Vikas Pachdha
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes