iOS: Capture console output of launched app on iOS simulator

Task-number: QTCREATORBUG-17483
Change-Id: Id18c51e20cf8b396fc610918610f04d39ead28b0
Reviewed-by: Eike Ziller <eike.ziller@qt.io>